--- a/index.html
+++ b/index.html
@@ -490,28 +490,27 @@
                     <h2 class="mob-show">Services</h2>
                     <ul class="services_list"> 
                          <li class="wow fadeInUp"><a href="services/public-relations.htm"><span class="icon-services2">&nbsp;</span>
+        <h2>Sports Management</h2>
+        <span class="icon-more"></span></a> </li>
+        <li class="wow fadeInUp"><a href="services/public-relations.htm"><span class="icon-services2">&nbsp;</span>
         <h2>Talent Management</h2>
         <span class="icon-more"></span></a> </li>
         <li class="wow fadeInUp"><a href="services/public-relations.htm"><span class="icon-services2">&nbsp;</span>
-        <h2>Public Relations</h2>
+        <h2>Event Management</h2>
         <span class="icon-more"></span></a> </li>
         <li class="wow fadeInUp"><a href="services/public-relations.htm"><span class="icon-services2">&nbsp;</span>
-        <h2>Events &amp; IP's</h2>
+        <h2>Sponsorship Management</h2>
         <span class="icon-more"></span></a> </li>
         <li class="wow fadeInUp"><a href="services/public-relations.htm"><span class="icon-services2">&nbsp;</span>
-        <h2>Brand Solutions</h2>
-        <span class="icon-more"></span></a> </li>
-        <li class="wow fadeInUp"><a href="services/public-relations.htm"><span class="icon-services2">&nbsp;</span>
-        <h2>Social Media and <br>
-          Web Solutions</h2>
+        <h2>Media Buying</h2>
         <span class="icon-more"></span></a> </li>
         <li class="wow fadeInUp"><a href="services/talent-management.htm"><span class="icon-services2">&nbsp;</span>
-        <h2>Licensing and<br>
+        <!-- <h2>Licensing and<br>
           Merchandising</h2></h2>
 
         <span class="icon-more"></span></a> </li>
-        <li class="wow fadeInUp"><a href="services/talent-management.htm"><span class="icon-services2">&nbsp;</span>
-        <h2>Animation and <br>
+        <li class="wow fadeInUp"><a href="services/talent-management.htm"><span class="icon-services2">&nbsp;</span> -->
+        <!-- <h2>Animation and <br>
           Gaming</h2>
                         <li class="wow fadeInUp">
                             <a href="services/talent-management.htm">
@@ -545,15 +544,15 @@
                                 <h2>Digital Solutions</h2>
                                 <span class="icon-more"></span>
                             </a>
-                        </li>
-                        <li class="wow fadeInUp">
+                        </li> -->
+                        <!-- <li class="wow fadeInUp">
                             <a href="services/business-ventures.htm">
                                 <span class="icon-services4">&nbsp;</span>
                                 <h2>Business Ventures</h2>
                                 <span class="icon-more"></span>
                             </a>
-                        </li>
-                        <li class="wow fadeInUp">
+                        </li> -->
+                        <!-- <li class="wow fadeInUp">
                             <a href="services/sponsorship.htm">
                                 <span class="icon-services2">&nbsp;</span>
                                 <h2>Sponsorship</h2>
@@ -566,7 +565,7 @@
                                 <h2>Intellectual Property</h2>
                                 <span class="icon-more"></span>
                             </a>
-                        </li>
+                        </li> -->
                         <li class="wow fadeInUp">
                             <a href="services/cornerstone-productions.htm">
                                 <span class="icon-services11">&nbsp;</span>
@@ -578,8 +577,8 @@
         <h2>Events &amp; IP's </h2>
         <span class="icon-more"></span></a> </li>
                     </ul>
-                </div>
-            </section>
+                </div> 
+            </section> -->
             <!-- :: Services :: -->
             <!-- :: Talent :: -->
             <section id="Talent">
