--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
         <li class="wow fadeInUp"><a href="services/public-relations.htm"><span class="icon-services2">&nbsp;</span>
         <h2>Media Buying</h2>
         <span class="icon-more"></span></a> </li>
-        <li class="wow fadeInUp"><a href="services/talent-management.htm"><span class="icon-services2">&nbsp;</span>
+        <!-- <li class="wow fadeInUp"><a href="services/talent-management.htm"><span class="icon-services2">&nbsp;</span> -->
         <!-- <h2>Licensing and<br>
           Merchandising</h2></h2>
 
@@ -566,13 +566,13 @@
                                 <span class="icon-more"></span>
                             </a>
                         </li> -->
-                        <li class="wow fadeInUp">
+                        <!-- <li class="wow fadeInUp">
                             <a href="services/cornerstone-productions.htm">
                                 <span class="icon-services11">&nbsp;</span>
                                 <h2>Cornerstone Productions</h2>
                                 <span class="icon-more"></span>
                             </a>
-                        </li>
+                        </li> -->
                         <!-- <li class="wow fadeInUp"><a href="services/events-ips.htm"><span class="icon-services3">&nbsp;</span>
         <h2>Events &amp; IP's </h2>
         <span class="icon-more"></span></a> </li>
@@ -586,10 +586,36 @@
             <div class="clear">&nbsp;</div>
             <div class="clear">&nbsp;</div>
 -->
-                <h3 class="hd">Talent</h3>
+                <h3 class="hd1">Sports Management</h3>
                 <div class="wrap">
-                    <h2 class="mob-show">Talent</h2>
-                    <ul class="talent_list">
+                    <h2 class="mob-show">Sports Management</h2>
+
+                    <div class="about_right wow fadeInUp">
+                        <br>
+                        <p>
+                            We focus both on the promotion of sports events and teams, as well as the promotion of other products & services through sporting events, sports team & athletes.  
+                        </p>
+                        <p>Examples of Marketing through sports :
+                        
+                        <ul>
+                            <li>
+                                <strong>Sponsorship of Sports Events</strong>
+                            </li>
+                            <li>
+                                <strong>Sponsorship of Teams</strong>
+                            </li>
+                            <li>
+                                <strong>Sponsorship of Athlete</strong>
+                            </li>
+                        </ul>
+                        </p>
+                        <!-- <img src="sportsmanagement.PNG" height="400px"> -->
+                        <img src="sportsmanagement3.PNG" height="400px">
+                        <img src="sportsmanagement4.PNG" height="400px">
+                        <img src="sportsmanagement2.PNG" height="400px">
+
+                    </div>
+                    <!-- <ul class="talent_list">
                         <li class="wow fadeInUp">
                             <a href="talent/virat-kohli.htm">
                                 <span class="pic-talent">
@@ -941,7 +967,7 @@
                                 <span class="icon-more"></span>
                             </a>
                         </li>
-                    </ul>
+                    </ul> -->
                 </div>
             </section>
             <!-- :: Non exclusive Talent :: -->
@@ -950,10 +976,14 @@
             <div class="clear">&nbsp;</div>
             <div class="clear">&nbsp;</div>
 -->
-                <h3 class="hd">Non-Exclusive Talent</h3>
+                <h3 class="hd2">Talent Management</h3>
                 <div class="wrap">
-                    <h2 class="mob-show">Non-Exclusive Talent</h2>
-                    <ul class="talent_list">
+                    <h2 class="mob-show">Talent Management</h2>
+                    <p>At Significant, we understand the value of the brands & products of our clients as well as the image of the celebrities. Our aim is to bring that appeal to products by seamlessly connecting them with the celebrities.</p>
+                    <img src="talentmanagement.PNG" height="600px">
+                    <img src="talentmanagement2.PNG" height="600px">
+
+                    <!-- <ul class="talent_list">
                         <li class="wow fadeInUp">
                             <a href="non-exclusive-talent/dj-bravo.htm">
                                 <span class="pic-talent">
@@ -1052,13 +1082,13 @@
                                 <h2>Aakash Chopra</h2>
                                 <span class="icon-more"></span>
                             </a>
-                        </li>
+                        </li> -->
                         <!-- <li class="wow fadeInUp"><a href="non-exclusive-talent/murli-karthik.htm"><span class="pic-talent">
                         <img src="non-exclusive-talent/sports/thumb-murli-karthik.jpg" alt="Murli Karthik"></span>
                         <h2>Murli Karthik</h2>
                         <span class="icon-more"></span></a>
                     </li> -->
-                        <li class="wow fadeInUp">
+                        <!-- <li class="wow fadeInUp">
                             <a href="non-exclusive-talent/mohinder-amarnath.htm">
                                 <span class="pic-talent">
                                     <img src="non-exclusive-talent/sports/thumb-mohinder-amarnath.jpg" alt="Mohinder Amarnath">
@@ -1103,7 +1133,7 @@
                                 <span class="icon-more"></span>
                             </a>
                         </li>
-                    </ul>
+                    </ul> -->
                 </div>
             </section>
             <a name="clients"></a>
