--- a/index.html
+++ b/index.html
@@ -611,8 +611,8 @@
                         </p>
                         <!-- <img src="sportsmanagement.PNG" height="400px"> -->
                         <img src="sportsmanagement3.PNG" height="400px">
-                        <img src="sportsmanagement4.PNG" height="400px">
-                        <img src="sportsmanagement2.PNG" height="400px">
+                        <img src="sportsmanagement4.png" height="400px">
+                        <img src="sportsmanagement2.png" height="400px">
 
                     </div>
                     <!-- <ul class="talent_list">
