--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
                         </ul>
                         </p>
                         <!-- <img src="sportsmanagement.PNG" height="400px"> -->
-                        <img src="sportsmanagement3.PNG" height="400px">
+                        <img src="sportsmanagement3.jpg" height="400px">
                         <img src="sportsmanagement4.png" height="400px">
                         <img src="sportsmanagement2.png" height="400px">
 
