--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
                         <!-- <img src="sportsmanagement.PNG" height="400px"> -->
                         <img src="sportsmanagement3.jpg" height="400px">
                         <img src="sportsmanagement4.png" height="400px">
-                        <img src="sportsmanagement2.png" height="400px">
+                        <img src="sportsmanagement2.jpg" height="400px">
 
                     </div>
                     <!-- <ul class="talent_list">
