--- a/index.html
+++ b/index.html
@@ -1804,7 +1804,7 @@
                             </p>
 
                             <p>
-                                <b>P :</b>
+                                <b>Phone :</b>
                                 <a href="tel:+91-900-411-1984">+91-9004111984</a>
                             </p>
 
@@ -1901,10 +1901,10 @@
                             </ul> -->
                             <ul class="social_media">
                                 <li>
-                                    <a href="https://www.facebook.com/cornerstoneway" target="_blank" id="facebook" title="facebook">facebook</a>
+                                    <a href="https://www.facebook.com/" target="_blank" id="Facebook" title="Facebook">Facebook</a>
                                 </li>
                                 <li>
-                                    <a href="https://twitter.com/Cornerstone_CSE" target="_blank" id="twitter" title="twitter">twitter</a>
+                                    <a href="https://twitter.com/" target="_blank" id="Twitter" title="Twitter">Twitter</a>
                                 </li>
                             </ul>
                         </div>
