--- a/index.html
+++ b/index.html
@@ -609,36 +609,8 @@
                         <img src="sportsmanagement4.png" height="400px">
                         <img src="sportsmanagement2.jpg" height="400px">
 
-                    </div>
-                    <!-- <ul class="talent_list">
-                        <li class="wow fadeInUp">
-                            <a href="talent/virat-kohli.htm">
-                                <span class="pic-talent">
-                                    <img src="talent/sports/thumb-virat.jpg" alt="Virat Kohli">
-                                </span>
-                                <h2>Virat Kohli</h2>
-                                <span class="icon-more"></span>
-                            </a>
-                        </li>
-                        <li class="wow fadeInUp">
-                            <a href="talent/vinesh-phogat.htm">
-                                <span class="pic-talent">
-                                    <img src="talent/sports/thumb-vinesh-phogat.jpg" alt="Vinesh Phogat">
-                                </span>
-                                <h2>Vinesh Phogat</h2>
-                                <span class="icon-more"></span>
-                            </a>
-                        </li>
-                        <li class="wow fadeInUp">
-                            <a href="talent/kl-rahul.htm">
-                                <span class="pic-talent">
-                                    <img src="talent/sports/thumb-rahul.jpg" alt="">
-                                </span>
-                                <h2>KL Rahul</h2>
-                                <span class="icon-more"></span>
-                            </a>
-                        </li>
-                        <li class="wow fadeInUp">
+                    
+                       <!-- <li class="wow fadeInUp">
                             <a href="talent/umesh-yadav.htm">
                                 <span class="pic-talent">
                                     <img src="talent/sports/thumb-umesh.jpg" alt="Umesh Yadav">
@@ -1250,10 +1222,42 @@
                     <div class="clear">&nbsp;</div>
                     <div class="clear">&nbsp;</div>
                     <div class="clear">&nbsp;</div>
-                    <h3 class="hd">Brands Associated With Us </h3>
+                    <h3 class="hd">Brands Associated With Us ---Testing---</h3>
                     <div class="wrap">
-                        <h2 class="mob-show">Brands Associated With Us</h2>
+                        <h2 class="mob-show">Brands Associated With Us ---Testing--- </h2>
                     </div>
+
+                </div>
+                <ul class="talent_list">
+                   <li class="wow fadeInUp">
+                       <a href="#">
+                           <span class="pic-talent">
+                               <img src="images/1.PNG" height="150" alt="Mohammad Azharuddin">
+                           </span>
+                           <h2>Mohammad Azharuddin</h2>
+                           <span class="icon-more"></span>
+                       </a>
+                   </li>
+                   <li class="wow fadeInUp">
+                       <a href="#">
+                           <span class="pic-talent">
+                               <img src="images/2.PNG" height="150" alt="VVS Laxman">
+                           </span>
+                           <h2>VVS Laxman</h2>
+                           <span class="icon-more"></span>
+                       </a>
+                   </li>
+                   <li class="wow fadeInUp">
+                       <a href="#">
+                           <span class="pic-talent">
+                               <img src="images/3.PNG" height="150" alt="">
+                           </span>
+                           <h2>Daren Sammy
+                        </h2>
+                           <span class="icon-more"></span>
+                       </a>
+                   </li>
+                </ul>
                     
 
                 </div>
