--- a/index.html
+++ b/index.html
@@ -1765,9 +1765,9 @@
                             All brand names/logos used are trademarks or registered trademarks of their respective companies and are hereby acknowledged.<br>
                             <br>
                             <br>
-                            <a href="timeline/default.htm" class="read-more1">
+                            <!-- <a href="timeline/default.htm" class="read-more1">
                                 View List of Accomplishments <span class="icon-more"></span>
-                            </a>
+                            </a> -->
                         </div>
                     </div>
                     <div class="clear"></div>
