--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                         <div class="cornerstone">
                             <p class="icon"></p>
                             <p>
-                                <img src="SignificantSports.png" alt="SignificantSports"  height = "300px" title="SignificantSports"/>
+                                <img src="significantsports.jpg" alt="SignificantSports"  height = "300px" title="SignificantSports"/>
                             </p>
                         </div>
                         <!-- <div class="cse">
