--- a/index.html
+++ b/index.html
@@ -604,11 +604,12 @@
                             </li>
                         </ul>
                         </p>
-                        <!-- <img src="sportsmanagement.PNG" height="400px"> -->
-                        <img src="sportsmanagement3.jpg" height="400px">
-                        <img src="sportsmanagement4.png" height="400px">
-                        <img src="sportsmanagement2.jpg" height="400px">
-
+                        <div class="wow fadeInUp">
+                            <!-- <img src="sportsmanagement.PNG" height="400px"> -->
+                            <img src="sportsmanagement3.jpg" height="400px">
+                            <img src="sportsmanagement4.png" height="400px">
+                            <img src="sportsmanagement2.jpg" height="400px">
+                        </div>
                     
                        <!-- <li class="wow fadeInUp">
                             <a href="talent/umesh-yadav.htm">
