--- a/index.html
+++ b/index.html
@@ -485,20 +485,22 @@
                     <h2 class="mob-show">Services</h2>
                     <ul class="services_list"> 
         <li class="wow fadeInUp"><a href="services/public-relations.htm"><span class="icon-services1">&nbsp;</span>
-        <h2>Sports Management</h2>
-        <span class="icon-more"></span></a> </li>
+        <h2>Sports Management</h2></a> </li>
+        <!-- <span class="icon-more"></span> -->
         <li class="wow fadeInUp"><a href="services/public-relations.htm"><span class="icon-services2">&nbsp;</span>
-        <h2>Talent Management</h2>
-        <span class="icon-more"></span></a> </li>
+        <h2>Talent Management</h2></a> </li>
+        <!-- <span class="icon-more"></span> -->
         <li class="wow fadeInUp"><a href="services/public-relations.htm"><span class="icon-services3">&nbsp;</span>
-        <h2>Event Management</h2>
-        <span class="icon-more"></span></a> </li>
+        <h2>Event Management</h2></a> </li>
+        <!-- <span class="icon-more"></span></a> </li> -->
         <li class="wow fadeInUp"><a href="services/public-relations.htm"><span class="icon-services4">&nbsp;</span>
-        <h2>Sponsorship Management</h2>
-        <span class="icon-more"></span></a> </li>
+        <h2>Sponsorship Management</h2></a> </li>
+        <!-- <span class="icon-more"></span></a> </li> -->
         <li class="wow fadeInUp"><a href="services/public-relations.htm"><span class="icon-services5">&nbsp;</span>
-        <h2>Media Buying</h2>
-        <span class="icon-more"></span></a> </li>
+        <h2>Media Buying</h2></a> </li>
+        <!-- <span class="icon-more"></span></a> </li> -->
+
+
         <!-- <li class="wow fadeInUp"><a href="services/talent-management.htm"><span class="icon-services2">&nbsp;</span> -->
         <!-- <h2>Licensing and<br>
           Merchandising</h2></h2>
