--- a/index.html
+++ b/index.html
@@ -192,6 +192,8 @@
                             <h1 class="logo">
                                 <a href="#home">
                                     <img src="significantsports.png" alt="SignificantSports" title="SignificantSports"/>
+                                    
+                                    <img src="images/significantsports-nav.png" alt="SignificantSports" title="SignificantSports"/>
                                 </a>
                             </h1>
                             <h2 class="logo1">
@@ -596,13 +598,13 @@
                         
                         <ul>
                             <li>
-                                <strong>Sponsorship of Sports Events</strong>
+                                <strong>- Sponsorship of Sports Events</strong>
                             </li>
                             <li>
-                                <strong>Sponsorship of Teams</strong>
+                                <strong>- Sponsorship of Teams</strong>
                             </li>
                             <li>
-                                <strong>Sponsorship of Athlete</strong>
+                                <strong>- Sponsorship of Athlete</strong>
                             </li>
                         </ul>
                         </p>
