--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                     <div class="site_desc wow fadeInUp">
                         <!--  <p>We are always innovating to stay ahead of the curve.</p>
       <br>-->
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        <p>Event Management company in Mumbai</p>
                         <br>
                         <!--<p>CSE - a sister concern of Cornerstone is a full service licensing and new-media marketing agency</p>-->
                         <div class="clear hide">&nbsp;</div>
@@ -565,13 +565,7 @@
                                 <span class="icon-more"></span>
                             </a>
                         </li> -->
-                        <!-- <li class="wow fadeInUp">
-                            <a href="services/cornerstone-productions.htm">
-                                <span class="icon-services11">&nbsp;</span>
-                                <h2>Cornerstone Productions</h2>
-                                <span class="icon-more"></span>
-                            </a>
-                        </li> -->
+                        
                         <!-- <li class="wow fadeInUp"><a href="services/events-ips.htm"><span class="icon-services3">&nbsp;</span>
         <h2>Events &amp; IP's </h2>
         <span class="icon-more"></span></a> </li>
@@ -946,8 +940,7 @@
             <section id="nonExTalent">
                 <!--<div class="clear">&nbsp;</div>
             <div class="clear">&nbsp;</div>
-            <div class="clear">&nbsp;</div>
--->
+            <div class="clear">&nbsp;</div>-->
                 <h3 class="hd2">Talent Management</h3>
                 <div class="wrap">
                     <h2 class="mob-show">Talent Management</h2>
@@ -955,10 +948,159 @@
                     <p>At Significant, we understand the value of the brands & products of our clients as well as the image of the celebrities. Our aim is to bring that appeal to products by seamlessly connecting them with the celebrities.</p>
                     </div>
 
-                    <div class="wow fadeInUp">
+                    <!-- <div class="wow fadeInUp">
                         <img src="talentmanagement.PNG" height="600px">
                     <img src="talentmanagement2.PNG" height="600px">
-                    </div>
+                    </div> -->
+
+                    <ul class="talent_list">
+                        <li class="wow fadeInUp">
+                            <a href="#">
+                                <span class="pic-talent">
+                                    <img src="images/1.PNG" height="150" alt="Mohammad Azharuddin">
+                                </span>
+                                <h2>Mohammad Azharuddin</h2>
+                                <!-- <span class="icon-more"></span> -->
+                            </a>
+                        </li>
+                        <li class="wow fadeInUp">
+                            <a href="#">
+                                <span class="pic-talent">
+                                    <img src="images/2.PNG" height="150" alt="VVS Laxman">
+                                </span>
+                                <h2>VVS Laxman</h2>
+                                <!-- <span class="icon-more"></span> -->
+                            </a>
+                        </li>
+                        <li class="wow fadeInUp">
+                            <a href="#">
+                                <span class="pic-talent">
+                                    <img src="images/3.PNG" height="150" alt="Daren Sammy">
+                                </span>
+                                <h2>Daren Sammy
+                             </h2>
+                                <!-- <span class="icon-more"></span> -->
+                            </a>
+                        </li>
+                        <li class="wow fadeInUp">
+                         <a href="#">
+                             <span class="pic-talent">
+                                 <img src="images/4.PNG" height="150" alt="Chris Gayle">
+                             </span>
+                             <h2>Chris Gayle
+                          </h2>
+                             <!-- <span class="icon-more"></span> -->
+                         </a>
+                     </li><li class="wow fadeInUp">
+                         <a href="#">
+                             <span class="pic-talent">
+                                 <img src="images/5.PNG" height="150" alt="David Warner">
+                             </span>
+                             <h2>David Warner
+                          </h2>
+                             <!-- <span class="icon-more"></span> -->
+                         </a>
+                     </li>
+                     <li class="wow fadeInUp">
+                         <a href="#">
+                             <span class="pic-talent">
+                                 <img src="images/6.PNG" height="150" alt="">
+                             </span>
+                             <h2>-
+                          </h2>
+                             <!-- <span class="icon-more"></span> -->
+                         </a>
+                     </li><li class="wow fadeInUp">
+                         <a href="#">
+                             <span class="pic-talent">
+                                 <img src="images/7.PNG" height="150" alt="Hima Das">
+                             </span>
+                             <h2>Hima Das
+                          </h2>
+                             <!-- <span class="icon-more"></span> -->
+                         </a>
+                     </li><li class="wow fadeInUp">
+                         <a href="#">
+                             <span class="pic-talent">
+                                 <img src="images/8.PNG" height="150" alt="Vijender Singh">
+                             </span>
+                             <h2>Vijender Singh
+                          </h2>
+                             <!-- <span class="icon-more"></span> -->
+                         </a>
+                     </li><li class="wow fadeInUp">
+                         <a href="#">
+                             <span class="pic-talent">
+                                 <img src="images/9.PNG" height="150" alt="Mary Kom">
+                             </span>
+                             <h2>Mary Kom
+                          </h2>
+                             <!-- <span class="icon-more"></span> -->
+                         </a>
+                     </li><li class="wow fadeInUp">
+                         <a href="#">
+                             <span class="pic-talent">
+                                 <img src="images/10.PNG" height="150" alt="">
+                             </span>
+                             <h2>-
+                          </h2>
+                             <!-- <span class="icon-more"></span> -->
+                         </a>
+                     </li><li class="wow fadeInUp">
+                         <a href="#">
+                             <span class="pic-talent">
+                                 <img src="images/11.PNG" height="150" alt="Kuldeep Yadav">
+                             </span>
+                             <h2>Kuldeep Yadav
+                          </h2>
+                             <!-- <span class="icon-more"></span> -->
+                         </a>
+                     </li><li class="wow fadeInUp">
+                         <a href="#">
+                             <span class="pic-talent">
+                                 <img src="images/12.PNG" height="150" alt="Deepak Hooda                            ">
+                             </span>
+                             <h2>Deepak Hooda
+                          </h2>
+                             <!-- <span class="icon-more"></span> -->
+                         </a>
+                     </li><li class="wow fadeInUp">
+                         <a href="#">
+                             <span class="pic-talent">
+                                 <img src="images/13.PNG" height="150" alt="">
+                             </span>
+                             <h2>-
+                          </h2>
+                             <!-- <span class="icon-more"></span> -->
+                         </a>
+                     </li><li class="wow fadeInUp">
+                         <a href="#">
+                             <span class="pic-talent">
+                                 <img src="images/14.PNG" height="150" alt="Brett Lee                            ">
+                             </span>
+                             <h2>Brett Lee
+                          </h2>
+                             <!-- <span class="icon-more"></span> -->
+                         </a>
+                     </li><li class="wow fadeInUp">
+                         <a href="#">
+                             <span class="pic-talent">
+                                 <img src="images/15.PNG" height="150" alt="">
+                             </span>
+                             <h2>-
+                          </h2>
+                             <!-- <span class="icon-more"></span> -->
+                         </a>
+                     </li><li class="wow fadeInUp">
+                         <a href="#">
+                             <span class="pic-talent">
+                                 <img src="images/16.PNG" height="150" alt="Lisa Sthalekar                            ">
+                             </span>
+                             <h2>Lisa Sthalekar
+                          </h2>
+                         </a>
+                     </li>
+                     </ul>
 
                     <!-- <ul class="talent_list">
                         <li class="wow fadeInUp">
@@ -1237,42 +1379,13 @@
                     <div class="clear">&nbsp;</div>
                     <div class="clear">&nbsp;</div>
                     <div class="clear">&nbsp;</div>
-                    <h3 class="hd">Brands Associated With Us ---Testing---</h3>
+                    <h3 class="hd">Brands Associated With Us</h3>
                     <div class="wrap">
-                        <h2 class="mob-show">Brands Associated With Us ---Testing--- </h2>
+                        <h2 class="mob-show">Brands Associated With Us </h2>
                     </div>
 
                 </div>
-                <ul class="talent_list">
-                   <li class="wow fadeInUp">
-                       <a href="#">
-                           <span class="pic-talent">
-                               <img src="images/1.PNG" height="150" alt="Mohammad Azharuddin">
-                           </span>
-                           <h2>Mohammad Azharuddin</h2>
-                           <span class="icon-more"></span>
-                       </a>
-                   </li>
-                   <li class="wow fadeInUp">
-                       <a href="#">
-                           <span class="pic-talent">
-                               <img src="images/2.PNG" height="150" alt="VVS Laxman">
-                           </span>
-                           <h2>VVS Laxman</h2>
-                           <span class="icon-more"></span>
-                       </a>
-                   </li>
-                   <li class="wow fadeInUp">
-                       <a href="#">
-                           <span class="pic-talent">
-                               <img src="images/3.PNG" height="150" alt="">
-                           </span>
-                           <h2>Daren Sammy
-                        </h2>
-                           <span class="icon-more"></span>
-                       </a>
-                   </li>
-                </ul>
+
                     
 
                 </div>
@@ -1813,9 +1926,9 @@
                         <div class="contact_left wow fadeInUp">
                             <h3>Address </h3>
                             <p>A001, Shree Savgan Heights, <br>
-                                RTO Road, Four bungalows, 
+                                RTO Road, 4 bungalows, 
                                 Andheri (W)
-                                <br> Mumbai - 400053</p>
+                                <br> Mumbai, Maharashtra 400053<br> India</p>
 
                             <p>
                                 <b>Mail :</b>
