--- a/index.html
+++ b/index.html
@@ -279,10 +279,10 @@
                         <!--<p>CSE - a sister concern of Cornerstone is a full service licensing and new-media marketing agency</p>-->
                         <div class="clear hide">&nbsp;</div>
                         <p>
-                            <a href="#Services2">Enter</a>
+                            <a href="#Services">Enter</a>
                         </p>
                         <p>
-                            <a href="#Services2">
+                            <a href="#Services">
                                 <span class="icon_down">&nbsp;</span>
                             </a>
                         </p>
