--- a/index.html
+++ b/index.html
@@ -1393,6 +1393,72 @@
                         <h2 class="mob-show">Brands Associated With Us </h2>
                     </div>
 
+                    <!-- <img src="images/brands1.PNG">
+                    <img src="images/brands2.PNG"> -->
+
+                    <ul class="talent_list">
+                        <li class="wow fadeInUp">
+                                <span class="pic-brands">
+                                    <img src="images/logo-apple.png" height="100" alt="Apple">
+                                </span>
+                                <h2>Apple</h2>
+                            </a>
+                        </li>
+                        <li class="wow fadeInUp">
+                                <span class="pic-talent">
+                                    <img src="images/logo-ipl.jpg" height="100" alt="IPL">
+                                </span>
+                                <h2>IPL</h2>
+                            </a>
+                        </li>
+                        <li class="wow fadeInUp">
+                            <span class="pic-talent">
+                                <img src="images/logo-bcci.png" height="100" alt="BCCI">
+                            </span>
+                            <h2>BCCI</h2>
+                        </a>
+                        </li>
+                        <li class="wow fadeInUp">
+                            <span class="pic-talent">
+                                <img src="images/logo-icc.png" height="100" alt="ICC">
+                            </span>
+                            <h2>ICC</h2>
+                            </a>
+                        </li>
+                        <li class="wow fadeInUp">
+                            <span class="pic-talent">
+                                <img src="images/logo-starsports.png" height="100" alt="Star Sports">
+                            </span>
+                            <h2>Star Sports</h2>
+                            </a>
+                        </li>
+                        <li class="wow fadeInUp">
+                            <span class="pic-talent">
+                                <img src="images/logo-hublot.png" height="100" alt="Hublot">
+                            </span>
+                            <h2>Hublot</h2>
+                            </a>
+                        </li>
+                        <li class="wow fadeInUp">
+                            <span class="pic-talent">
+                                <img src="images/logo-oakley.jpg" height="100" alt="Oakley">
+                            </span>
+                            <h2>Oakley</h2>
+                            </a>
+                        </li>
+                        <li class="wow fadeInUp">
+                            <span class="pic-talent">
+                                <img src="images/logo-audi.png" height="100" alt="Audi">
+                            </span>
+                            <h2>Audi</h2>
+                            </a>
+                        </li>
+                        </ul>
+
+                        <hr>
+
+                        
+
                 </div>
 
                 <a name="timeline"></a>
